--- a/style.css
+++ b/style.css
@@ -10,6 +10,17 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
+#help_section{
+  font-size: large;
+  height: 80%;
+  width: 20%;
+  border-radius: 10px;
+  padding: 50px;
+  margin-right: 2em;
+  background-color: white;
+  background-color: #ea6b8f;
+
+}
 
 body {
   font-family: "Nunito", sans-serif;
